timer mobile alignment fixed

--- a/styles/sass/mixins.scss
+++ b/styles/sass/mixins.scss
@@ -13,3 +13,14 @@
     @content;
   }
 }
+
+@mixin fontSize($sizeValue) {
+  font-size: $sizeValue * 1px;
+  font-size: ($sizeValue/10) * 1rem;
+}
+
+@mixin media($width) {
+  @media only screen and (max-width: $width) {
+    @content;
+  }
+}
